fixed look for menu on mobile

--- a/src/Queries.css
+++ b/src/Queries.css
@@ -135,6 +135,13 @@
     font-size: calc(0.01vw + 1em);
   }
 
+  /* MENU SECTION */
+  .menu-item-flex {
+    font-size: 0.8rem;
+    font-weight: 400;
+    gap: 0.8;
+  }
+
   /* Contact Us Section */
   .contact-us-description-text {
     font-size: calc(0.1vw + 1em);
